--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "autoprefixer": "9",
     "core-js": "^3.8.2",
     "graphql-tag": "^2.11.0",
+    "node-sass": "^5.0.0",
     "nuxt": "^2.14.12",
     "postcss": "7",
+    "sass-loader": "10.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "devDependencies": {
